# pycdo

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/: default.pycrules  pycdo
sys/: init-venv.sh  with-venv.sh
